--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0"
   },
